--- a/12-bool-framework.css
+++ b/12-bool-framework.css
@@ -1,9 +1,9 @@
 /* DEBUG */
 
 .dbg [class*="col-"]{
-    border: 2px solid green;
-    background-color: aquamarine;
-    height: 200px;
+    border: 2px solid black;
+    background-color: rgb(208, 127, 255);
+    height: 100px;
 }
 *{
     box-sizing: border-box;
@@ -14,12 +14,13 @@
     width: 100%;
 }
 .container{
-    max-width: 1170px;
+    /* max-width: 1170px; */
+    max-width: 1000px;
     margin: 0 auto;
 }
 .row{
     width: 100%;
-    margin:0 -15px;
+    /* margin:0 -15px; */
 
 
 }
@@ -109,13 +110,36 @@ width: calc((100%/12) *1);
     margin-left: calc((100%/12) *11);
 }
 
+.text-center{
+    text-align: center;
+}
+.text-left{
+    text-align: left;
+}
+}
 .text-right{
     text-align: right;
 }
 
 .list-none{
     list-style: none;
-    display: inline-block;
+    display: flex;
+}
+.flex-y-center{
+    display: flex;
+    align-items: center;
+}
+.flex-right{
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+   
+}
+
+.flex-center{
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 .my2{
     margin:2rem 0;
@@ -123,6 +147,61 @@ width: calc((100%/12) *1);
 
 .mx2{
     margin:0 2rem;
+}
+
+.m-top2{
+    margin-top:2rem;
+}
+.py1{
+    padding:1rem 0;
+}
+.py2{
+    padding:2rem 0;
+}
+.py3{
+    padding:3rem 0;
+}
+.py4{
+    padding:4rem 0;
+}
+.p-top4{
+    padding-top:4rem;
+}
+.p-top3{
+    padding-top:3rem;
+}
+.p-bottom0_5{
+    padding-bottom: 0.5rem;
+}
+.p-bottom1{
+    padding-bottom: 1rem;
+}
+.p-bottom2{
+    padding-bottom: 2rem;
+}
+.p-bottom3{
+    padding-bottom: 3rem;
+}
+.p-bottom4{
+    padding-bottom: 4rem;
+}
+
+
+
+.p-top0.5{
+    padding-top: 0.5rem;
+}
+.p-top1{
+    padding-top: 1rem;
+}
+.p-top2{
+    padding-top: 2rem;
+}
+.p-top3{
+    padding-top: 3rem;
+}
+.p-top4{
+    padding-top: 4rem;
 }
 
 
@@ -230,7 +309,7 @@ Anche questo è poco flessibile  */
 }
 
 /* Dispositivi MD  */
-@media all and (min-width:768px) and (max-width:991px){
+@media all and (min-width:768px) and (max-width:1000px){
     h1{
         font-size: 2rem;
     }
@@ -311,10 +390,8 @@ Anche questo è poco flessibile  */
 }
 
 /* Dispositivi LG  */
-@media all and (min-width:992px){
-    h1{
-        font-size: 2.5rem;
-    }
+@media all and (min-width:1000px){
+  
 /* colonne 12° */
 
     .col-lg-1{
@@ -389,3 +466,6 @@ Anche questo è poco flessibile  */
         margin-left: calc((100%/12) *11);
     }
 }
+
+
+
